--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,9 @@
     </style>
 </head>
 <body>
-    <h3>YouTube Speed Controller</h3>
-    <p>Use Shift + S + + to increase speed.</p>
-    <p>Use Shift + S + - to decrease speed.</p>
+    <h3>YouTube Speed Controller</h3> 
+    <p>Alt , + : Increase speed</p>
+    <p>Alt , - : Decrease speed</p>
 </body>
 </html>
 
